--- a/apuntes/am2/parcial1-quarto/resumen.qmd
+++ b/apuntes/am2/parcial1-quarto/resumen.qmd
@@ -2426,8 +2426,6 @@ Se quiere armar una caja rectangular sin tapa con $12m^2$ de cartón. Determinar
 
   ax.view_init(elev=25, azim=-60)
 
-  ax.legend()
-
   plt.tight_layout()
 
   plt.show()
@@ -2436,7 +2434,7 @@ Se quiere armar una caja rectangular sin tapa con $12m^2$ de cartón. Determinar
     $$
       V(x,y,z)=xyz
     $$
-  - Por otro lado, la restricción que nos dan es que solo tenemos $12m^2$ de cartón para armar la caja. Nos están diciendo que el área de la misma es igual a 12. Como la caja no tiene tapa, con el cartón vamos a tener que cubrir la cara $xy$ (piso de la caja) una sola vez, la cara $yz$dos veces (los lados izquierdo y derecho de la caja) y la cara $xz$ también dos veces (las caras del frente y atrás de la caja). La ecuación del área, que es nuestra restricción nos queda así:
+  - Por otro lado, la restricción que nos dan es que solo tenemos $12m^2$ de cartón para armar la caja. Nos están diciendo que el área de la misma es igual a 12. Como la caja no tiene tapa, con el cartón vamos a tener que cubrir la cara $xy$ (piso de la caja) una sola vez, la cara $yz$ dos veces (los lados izquierdo y derecho de la caja) y la cara $xz$ también dos veces (las caras del frente y atrás de la caja). La ecuación del área, que es nuestra restricción nos queda así:
     $$
       g(x,y,z)=2xz + 2yz + xy = 12
     $$
@@ -2546,7 +2544,237 @@ $$
 :::
 
 # Integrales múltiples
-Último tema
+## Integrales dobles en rectángulos
+En análisis I habíamos visto las integrales para las funciones de una variable. Si queríamos integrar la función $f(x)$ en el intervalo $\left[a,b\right]$, lo que hacíamos era dividir ese intervalo en $n$ subintervalos cerrados $\left[x_{i-1}, x_{i}\right]$ de igual ancho $\Delta x=(b-a)/n$ y sumábamos todos los intervalos (armábamos la suma de Riemann)
+$$
+  \sum_{i=1}^{n} f(x_{i})\Delta x
+$$
+y decíamos que la integral de $f(x)$ en el intervalo $\left[a,b\right]$ era el resultado de la suma de Riemann cuando $x$ tiende a infinito.
+$$
+  \int_{a}^{b} f(x) \,dx = \lim_{n \to \infty} \sum_{i=1}^{n} f(x)\Delta x
+$$
+
+El resultado de la integral lo podíamos interpretar como el área bajo la curva en el segmento $\left[a,b\right]$. 
+
+Para el caso de funciones de dos variables al idea es la misma, solo que ahora tenemos que tener en cuenta que estamos trabajando con una dimensión mas. Cuando nosotros queremos definir la integral en cierto intervalo, este intervalo ahora va a tener dos dimensiones así que podría ser un cuadrado por ejemplo, o una circunferencia, o cualquier forma 2d. 
+
+Si consideramos una función $f$ de dos variables definida en un rectángulo cerrado
+$$
+  R=\left[a,b\right]\times \left[c,d\right] = \left\{(x,y) \in \mathbb{R}^{2} \;/\; a\leq x\leq b \land c\leq y\leq d\right\}
+$$
+la gráfica de $f$ es una superficie con ecuación $z=f(x,y)$. Llamemos $S$ al sólido que se encuentra entre el rectángulo $R$ y la función $f$
+$$
+  S=\left\{(x,y,z) \in \mathbb{R}^{3} \;/\; 0\leq z\leq f(x,y) \land (x,y) \in \mathbb{R}^{}\right\}
+$$
+Cuando hacemos una integral doble, obtenemos el volúmen de $S$.
+
+```{python}
+#| label: fig-volumen-solido
+#| fig-cap: La integral doble de $z=f(x,y)$ en la región $R$ representa el volúmen del sólido S (adaptado de @stewart2 [p. 988]).
 
 
+import plotly.graph_objects as go
+import numpy as np
 
+# Define the grid for the surface
+x = np.linspace(3, 5, 50)
+y = np.linspace(1, 3, 50)
+x, y = np.meshgrid(x, y)
+z = 2 + (x - 3)**2 + (y - 3)**2
+
+# Create the surface plot
+surface = go.Surface(
+    x=x, y=y, z=z,
+    colorscale='Viridis',  # Soft color scale
+    opacity=0.8,
+    showscale=False,
+    name='z=f(x,y)'
+)
+
+# Define the square in the xy-plane (z=0)
+square_x = [3, 5, 5, 3, 3]  # Closed loop
+square_y = [1, 1, 3, 3, 1]  # Closed loop
+square_z = [0, 0, 0, 0, 0]  # At z=0
+square = go.Scatter3d(
+    x=square_x, y=square_y, z=square_z,
+    mode='lines',
+    line=dict(color='black', width=2),
+    # fill='toself',  # Fill the square
+    # fillcolor='rgba(144, 238, 144, 0.5)',  # Light green with transparency
+    name='R'
+)
+
+x_wall_left = np.full(50, 3)
+y_wall_left = np.linspace(1, 3, 50)
+z_wall_left = 2 + (x_wall_left - 3)**2 + (y_wall_left - 3)**2
+wall_left = go.Surface(
+    x=np.array([x_wall_left, x_wall_left]),
+    y=np.array([y_wall_left, y_wall_left]),
+    z=np.array([np.zeros(50), z_wall_left]),
+    colorscale=[[0, 'rgba(144, 238, 144, 0.5)'], [1, 'rgba(144, 238, 144, 0.5)']],
+    showscale=False,
+    opacity=0.5,
+    name='Wall x=3'
+)
+
+x_wall_right = np.full(50, 5)
+y_wall_right = np.linspace(1, 3, 50)
+z_wall_right = 2 + (x_wall_right - 3)**2 + (y_wall_right - 3)**2
+wall_right = go.Surface(
+    x=np.array([x_wall_right, x_wall_right]),
+    y=np.array([y_wall_right, y_wall_right]),
+    z=np.array([np.zeros(50), z_wall_right]),
+    colorscale=[[0, 'rgba(144, 238, 144, 0.5)'], [1, 'rgba(144, 238, 144, 0.5)']],
+    showscale=False,
+    opacity=0.5,
+    name='Wall x=5'
+)
+
+y_wall_front = np.full(50, 1)
+x_wall_front = np.linspace(3, 5, 50)
+z_wall_front = 2 + (x_wall_front - 3)**2 + (y_wall_front - 3)**2
+wall_front = go.Surface(
+    x=np.array([x_wall_front, x_wall_front]),
+    y=np.array([y_wall_front, y_wall_front]),
+    z=np.array([np.zeros(50), z_wall_front]),
+    colorscale=[[0, 'rgba(144, 238, 144, 0.5)'], [1, 'rgba(144, 238, 144, 0.5)']],
+    showscale=False,
+    opacity=0.5,
+    name='Wall y=1'
+)
+
+y_wall_back = np.full(50, 3)
+x_wall_back = np.linspace(3, 5, 50)
+z_wall_back = 2 + (x_wall_back - 3)**2 + (y_wall_back - 3)**2
+wall_back = go.Surface(
+    x=np.array([x_wall_back, x_wall_back]),
+    y=np.array([y_wall_back, y_wall_back]),
+    z=np.array([np.zeros(50), z_wall_back]),
+    colorscale=[[0, 'rgba(144, 238, 144, 0.5)'], [1, 'rgba(144, 238, 144, 0.5)']],
+    showscale=False,
+    opacity=0.5,
+    name='Wall y=3'
+)
+
+annotations=[
+  dict(
+    showarrow=False,
+    x=4, y=2, z=2,
+    text="S",
+    font=dict(size=20, color="black")
+  ),
+  dict(
+    x=4.5, y=1.5, z=2 + 1.5**2 + 1.5**2,
+    text="z=f(x,y)",
+  ),
+  dict(
+    x=4, y=2, z=0,
+    text="R",
+    font=dict(size=20),
+    showarrow=False,
+  )
+]
+
+# Create layout with space around the plot
+layout = go.Layout(
+    scene=dict(
+        xaxis=dict(range=[2.5, 5.5], title='X', showticklabels=True),
+        yaxis=dict(range=[0.5, 3.5], title='Y', showticklabels=True),
+        zaxis=dict(range=[0, 10], title='Z', showticklabels=True),
+        aspectmode='cube',
+        annotations=annotations,
+    ),
+)
+
+# Combine all traces in the figure
+fig = go.Figure(data=[surface, square, wall_back, wall_front, wall_left, wall_right], layout=layout)
+
+# Show the plot
+fig.show()
+```
+
+Como dijimos, la idea para resolver este cálculo es el mismo que usamos cuando teníamos integrales simples. Lo que vamos a hacer ahora es dividir el rectángulo $R$ en cuadraditos mas chicos. Esto se hace dividiendo el intervalo $\left[a,b\right]$ en $m$ subintervalos $\left[x_{i-1},x_{i}\right]$ de igual ancho $\Delta x = (b-a)/m$ y dividiendo $\left[c,d\right]$ en $n$ subintervalos $\left[y_{j-1},y_{j}\right]$ de igual ancho $\Delta y=(d-c)/n$. Sabemos que cada cuadradito que nos quede va a tener un área $\Delta A$ determinada, y si multiplicamos ese área por el valor en $z$ que está asociado al miso, tenemos el volúmen que hay entre cada cuadradito y la función $z=f(x,y)$. Esto lo repetimos para todos los cuadraditos que tengamos y vamos a tener una aproximación del volúmen de $S$.
+$$
+  V\approx \sum_{i=1}^{m} \sum_{j=1}^{n} f(x_{ij},y_{ij})\Delta A
+$$
+Esta ecuación es la suma doble de Riemann. La doble sumatoria quiere decir que para cada $i$ se hace la sumatoria desde $j=1$ hasta $j=n$ del producto de $f(x,y)\cdot \Delta A$. Osea que la sumatoria de $j=1$ hasa $j=m$ se repite $n$ veces: una para cada $i$.
+
+![Imagen sacada de @stewart2 [p. 989]](./imagenes/riemann-dobles.png)
+
+A medida que los cuadrados sean mas y mas chicos, y haya mas y mas cuadrados, nos vamos a ir acercadando cada vez mas al valor real del volumen. Para lograr esto podemos calcular la suma cuando $m$ y $n$ tienden a infinito, y esto es la definición de una integral doble.
+
+::: {.callout-note title=Definición}
+**Integral Doble**
+
+La integral doble de $f$ en el rectángulo $R$ es
+$$
+  \iint_{R} f(x,y) \,dA = \lim_{m,n \to \infty}f(x_{ij}, y_{ij})\Delta A
+$$
+:::
+
+### Integrales iteradas
+Evaluar las integrales a partir de su definición es bastante dificil. Lo bueno es que las integrales dobles las podemos expresar como integrales iteradas, que después las podemos evaluar como integrales simples.
+
+Supongamos que $f$ es una función de dos variables, integrable en el rectángulo $R=\left[a,b\right]\times \left[c,d\right]$. Lo que podemos hacer es algo parecido a lo que hacíamos con las derivadas parciales: integramos primero respecto solo de una de las dos variables, digamos $y$ desde $c$ a $d$. De esta manera, $\int_{c}^{d} f(x,y) \,dy$ es un número que depende de $x$ (la variable y se fue porque la acabamos de integrar), así que la podemos pensar como una función de $x$:
+$$
+  H(x)=\int_{c}^{d} f(x,y) \,dy
+$$
+Y ahora podemos integrar la función $H(x)$ desde $a$ hasta $b$ comom si fuese una integral simple (de hecho, es una integral simple ahora):
+$$
+  \int_{a}^{b} H(x) \,dx
+$$
+Como sabemos que $H(x)$ es la integral de $f(x,y)$ respecto de $y$, podemos pensar la integral doble de la siguiente manera:
+$$
+  \int_{a}^{b} H(x) \,dx = \int_{a}^{b} \left[\int_{c}^{d} f(x,y) \,dy\right] \,dx = \int_{a}^{b} \int_{c}^{d} f(x,y) \,dy dx
+$$
+Es importante escribir siempre bien el orden de los diferenciales. En este caso va primero $dy$ porque dijimos que integrabamos primero respecto a $y$ y luego respecto a $x$. Sino hubiese quedado al revés.
+
+::: {.callout-tip title=Ejemplo}
+Evaluar la siguiente integral:
+$$
+  \int_{0}^{3} \int_{1}^{2} x^2y \,dy dx
+$$
+
+Por la notación, sabemos que primero tenemos que integrar en $y$, y el resultado que obtengamos lo tenemos que integrar en $x$.
+
+$$
+\begin{aligned}
+  \int_{0}^{3} \int_{1}^{2} x^2y \,dy dx &= \int_{0}^{3} \left[\int_{1}^{2} x^2y \,dy\right] \,dx = \int_{0}^{3} \Bigg[x^2\frac{y^2}{2}\Bigg]_{1}^{2} \,dx\\
+   &= \int_{0}^{3} x^2\frac{4}{2} - x^2\frac{1}{2} \,dx = \int_{0}^{3} \frac{3}{2}x^2 \,dx
+\end{aligned}
+$$
+Ahora tenemos que integrar el resultado obtenido respecto de $x$.
+$$
+  \int_{0}^{3} \frac{3}{2}x^2 \,dx = \Bigg[\frac{x^3}{2}\Bigg]_{0}^{3} = \frac{27}{2}
+$$
+:::
+
+::: {.callout-warning title=Teorema icon=false}
+**Teorema de Fubini**
+
+Si $f$ es continua en el rectángulo $R=\left\{(x,y) \;/\; a\leq x\leq b \land c\leq y\leq d\right\}$, entonces
+$$
+  \iint_{R} f(x,y) \,dA = \int_{a}^{b} \int_{c}^{d} f(x,y) \,dy\,dx = \int_{c}^{d} \int_{a}^{b} f(x,y) \,dx\,dy
+$$
+:::
+
+::: {.callout-tip title=Ejemplo}
+Como la función $f(x,y)=x^2y$ es continua dentro del rectángulo $R=\left\{(x,y) \;/\; 0\leq x\leq 3 \land 1\leq y\leq 2\right\}$, podemos calcular la integral de $f(x,y)$ en el orden contrario de integración y vamos a obtener el mismo resultado.
+
+La integral en el orden inverso es la siguiente
+$$
+\begin{aligned}
+  \int_{1}^{2} \int_{0}^{3} x^2y \,dx\,dy &= \int_{1}^{2} \left[\int_{0}^{3} x^2y \,dx\right] \,dy = \int_{1}^{2} \Bigg[\frac{x^3}{3}y\Bigg]_{0}^{3} \,dy = \int_{1}^{2} 9y \,dy
+\end{aligned}
+$$
+Y ahora integramos el resultado respecto de $y$.
+$$
+  \int_{1}^{2} 9y \,dy = \Bigg[\frac{9}{2}y^2\Bigg]_{1}^{2} = 18 - \frac{9}{2} = \frac{27}{2}
+$$
+:::
+
+::: {.callout-tip title=Ejemplo}
+Determinar el volúmen del sólido $S$ acotado por el parabolodie elíptico $x^2+2y^2+z=16$, los planos $x=2$, e $y=2$, y los tres planos coordenados.
+
+En los casos como este siempre combiene graficar antes.
+:::
